@@ -11,6 +11,7 @@ Improvements:
 Additions:
 
     * Support XDG_DESKTOP_DIR
+    * efreet_dirs_reset() for refreshing env vars after locale switches
 
 Efreet 1.2.0
 
